--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <body>
 
         <div class="row">
-            <div class="image-container"><img id="img1" src="img/j.png" height="200" width="200"></div> 
+            <div class="image-container"><img id="img1" src="img/icons8-cloud-100.png" height="200" width="200"></div> 
             <div class="image-container"><img id="img2" src="img/mn.png" height="200" width="200"></div>
             <div class="image-container"><img id="img3" src="img/nm1.png" height="200" width="200"></div>
         </div>
